force-app/main/default/objects/House__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Area in square meters</description>
    <label>Area</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>