force-app/main/default/objects/House__c/fields/Floors__c.field-meta.xml
<CustomField>
    <fullName>Floors__c</fullName>
    <description>Number of floors</description>
    <label>Floors</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>