force-app/main/default/objects/House__c/fields/HasGarage__c.field-meta.xml
<CustomField>
    <fullName>HasGarage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Garage</label>
    <type>Checkbox</type>
</CustomField>