force-app/main/default/objects/House__c/fields/HasPool__c.field-meta.xml
<CustomField>
    <fullName>HasPool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Pool</label>
    <type>Checkbox</type>
</CustomField>